[package]
name = "skeleton-sprint-launcher"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT"

[dependencies]
conrod_core = "0.70.0"
conrod_piston = "0.70.0"
glutin = "0.21.2"
image = "0.23.10"
libc = "0.2.77"
parking_lot = "0.9.0"
piston2d-graphics = "0.37.0"
pistoncore-input = "1.0.0"
piston_window = "0.113.0"
serde = { version = "1.0.116", features = [ "derive" ] }
steamworks = "0.6.1"
steamworks-sys = "0.6.1"
toml = "0.5.6"

# We want threaded to queue tasks on a background threadpool
# We also want sync for oneshot support to integrate steamworks and tokio
# fs is needed for file operations in futures
tokio = { version = "0.2.22", features = [ "rt-threaded", "sync", "fs" ] } 

pistoncore-glutin_window = "0.66.0"
winit = "0.19.5"

[patch.crates-io]
# They refer to different crate versions on crates io
# conrod_core = { git = "https://github.com/PistonDevelopers/conrod", rev = "dc98949" }
# conrod_piston = { git = "https://github.com/PistonDevelopers/conrod", rev = "dc98949" }
# Patch to upgrade piston2d-graphics.
conrod_core = { git = "https://github.com/adumbidiot/conrod", branch = "update-piston-graphics" }
conrod_piston = { git = "https://github.com/adumbidiot/conrod", branch = "update-piston-graphics" }

# Patch for building from pre-existing window
pistoncore-glutin_window = { git = "https://github.com/adumbidiot/glutin_window", branch = "from-raw" } 

# Patch to make steamworks callbacks FnOnce + remove dependency on Failure.
steamworks = { git = "https://github.com/Thinkofname/steamworks-rs", rev = "6ffbe434308d33d17cae219536800f354061e7ca" }
steamworks-sys = { git = "https://github.com/Thinkofname/steamworks-rs", rev = "6ffbe434308d33d17cae219536800f354061e7ca" }

# Patch for removing stb_truetype
piston2d-graphics = { git = "https://github.com/adumbidiot/graphics", branch = "update-rusttype" }
