[package]
name = "skeleton-sprint-launcher"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT"

[dependencies]
conrod_core = "0.71.0"
conrod_piston = "0.71.0"
glutin = "0.21.2"
image = "0.23.11"
libc = "0.2.82"
parking_lot = "0.11.1"
piston2d-graphics = "0.39.0"
pistoncore-input = "1.0.0"
piston_window = "0.116.0"
serde = { version = "1.0.117", features = [ "derive" ] }
steamworks = "0.6.1"
steamworks-sys = "0.6.1"
toml = "0.5.8"

# We want threaded to queue tasks on a background threadpool
# We also want sync for oneshot support to integrate steamworks and tokio
# fs is needed for file operations in futures
tokio = { version = "0.2.24", features = [ "rt-threaded", "sync", "fs" ] } 

pistoncore-glutin_window = "0.67.2"
winit = "0.19.5"

[patch.crates-io]
# They refer to different crate versions on crates io
# conrod_core = { git = "https://github.com/PistonDevelopers/conrod", rev = "31a08c83b957374a6ed365da5397da41cea6654d" }
# conrod_piston = { git = "https://github.com/PistonDevelopers/conrod", rev = "31a08c83b957374a6ed365da5397da41cea6654d" }
# Update pistoncore-glutin_window to 0.67.1
conrod_core = { git = "https://github.com/adumbidiot/conrod", branch = "update-glutin-window" }
conrod_piston = { git = "https://github.com/adumbidiot/conrod", branch = "update-glutin-window" }

# Patch for building from pre-existing window
# pistoncore-glutin_window = { git = "https://github.com/adumbidiot/glutin_window", branch = "from-raw" } 
# pistoncore-glutin_window = { git = "https://github.com/pistondevelopers/glutin_window", rev = "692b10ed14430f8fd860dd5c759b5f8a1957aebb" }

# Patch to make steamworks callbacks FnOnce + remove dependency on Failure.
steamworks = { git = "https://github.com/Thinkofname/steamworks-rs", rev = "6ffbe434308d33d17cae219536800f354061e7ca" }
steamworks-sys = { git = "https://github.com/Thinkofname/steamworks-rs", rev = "6ffbe434308d33d17cae219536800f354061e7ca" }
