[package]
name = "skeleton-sprint-launcher"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT"

[dependencies]
conrod_core = "0.71.0"
conrod_piston = "0.71.0"
glutin = "0.26.0"
image = "0.23.14"
libc = "0.2.90"
parking_lot = "0.11.1"
piston2d-graphics = "0.39.0"
pistoncore-input = "1.0.0"
piston_window = { version = "0.117.0", default-features = false }
serde = { version = "1.0.124", features = [ "derive" ] }
steamworks = "0.6.1"
steamworks-sys = "0.6.1"
toml = "0.5.8"

# We want threaded to queue tasks on a background threadpool
# We also want sync for oneshot support to integrate steamworks and tokio
# fs is needed for file operations in futures
tokio = { version = "0.2.22", features = [ "rt-threaded", "sync", "fs" ] } 

pistoncore-glutin_window = "0.68.1"

[patch.crates-io]
# They refer to different crate versions on crates io
# conrod_core = { git = "https://github.com/PistonDevelopers/conrod", rev = "31a08c83b957374a6ed365da5397da41cea6654d" }
# conrod_piston = { git = "https://github.com/PistonDevelopers/conrod", rev = "31a08c83b957374a6ed365da5397da41cea6654d" }
# Update pistoncore-glutin_window
conrod_core = { git = "https://github.com/adumbidiot/conrod", branch = "update-glutin-window" }
conrod_piston = { git = "https://github.com/adumbidiot/conrod", branch = "update-glutin-window" }

# Updated Glutin + Winit
pistoncore-glutin_window = { git = "https://github.com/nathaniel-daniel/glutin_window", branch = "logical-pixel-resize" }

# Patch to make steamworks callbacks FnOnce + remove dependency on Failure.
steamworks = { git = "https://github.com/Thinkofname/steamworks-rs", rev = "6ffbe434308d33d17cae219536800f354061e7ca" }
steamworks-sys = { git = "https://github.com/Thinkofname/steamworks-rs", rev = "6ffbe434308d33d17cae219536800f354061e7ca" }
